--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 # Site settings
-title: GWB Blog
+title: 高武博的代码屋
 SEOTitle: 高武博的博客 | GWB Blog
 header-img: img/post-bg-desk.jpg
 email: 1224496913@qq.com
